# actix-learning

./: .env  .gitignore  Cargo.toml
migrations/2022-04-22-020741_add_prices/: up.sql
src/: db_connection.rs  errors.rs  main.rs  schema.rs  script.sql
src/handlers/: authentication.rs  mod.rs  products.rs  register.rs
src/models/: price.rs  product.rs  user.rs
src/utils/: jwt.rs
